--- a/src/components/storiesComponents/sidebarComponents/StorySignIn.css
+++ b/src/components/storiesComponents/sidebarComponents/StorySignIn.css
@@ -1,10 +1,14 @@
 #sign-in-container {
-  color: rgba(255, 255, 255, 0.8);
   text-align: center;
   border: 0.5px solid rgba(201, 201, 201, 0.4);
   padding: 1.5rem 1rem;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+#login-question {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 200;
 }
 
 #sign-in-btn-container {
@@ -13,8 +17,9 @@
 }
 
 #sign-in-btn {
-  color: inherit;
+  color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
+  font-weight: 800;
 }
 
 #sign-in-btn:hover {
@@ -31,7 +36,7 @@
   background-image: linear-gradient(
     to right,
     rgba(255, 255, 255, 0),
-    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 0)
   );
 }
