--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -1,12 +1,20 @@
 /* STORY CONTAINER*/
+.unscrollable {
+  height: 500px;
+  overflow: hidden;
+}
+
 .stories-container {
+  position: relative;
+}
+
+.stories-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding-top: 5.3rem;
   padding-left: 3rem;
   padding-right: 3rem;
   padding-bottom: 6rem;
-  height: 100%;
 }
 
 .main-stories {
@@ -121,6 +129,10 @@
   margin-bottom: 40px;
 }
 
+.story-card:last-child {
+  margin-bottom: 21px;
+}
+
 /* HEADING CARD SECTION */
 .heading-card-section {
   padding: 5px 25px;
@@ -173,10 +185,7 @@ hr {
 }
 
 .button-group {
-  /* padding: 3px 0; */
   display: flex;
-  /* margin-left: 15px;
-  margin-right: 15px; */
   flex-grow: 1;
   flex-direction: row;
   order: 1;
