New landing page

--- a/src/components/landingComponents/ExploreScreen.css
+++ b/src/components/landingComponents/ExploreScreen.css
@@ -18,6 +18,8 @@
   color: #ffffff;
   text-transform: capitalize;
   grid-area: 1 / 1 / span 1 / span 3;
+  font-size: 2rem;
+  font-weight: 400;
 }
 .explore-tile {
   opacity: 0;
@@ -25,15 +27,13 @@
   text-decoration: none;
   color: #ededed;
 }
-
 .explore-tile img {
   width: 100%;
   object-fit: cover;
   height: 190px;
 }
-
 .popular-stories-title {
-  font-weight: 800;
+  font-weight: 400;
   overflow: hidden;
   width: 25vw;
   font-size: 20px;
@@ -41,22 +41,18 @@
   text-overflow: ellipsis;
   cursor: pointer;
 }
-
 .ps-title-link {
   color: #ededed;
   text-decoration: none;
 }
-
 .ps-title-link:hover {
   text-decoration: underline;
 }
-
 .ps-description {
   color: #adadad;
   font-weight: 300;
   transform: translateY(5px);
 }
-
 .spinner-explore-container {
   display: flex;
   flex-direction: column;
@@ -66,7 +62,6 @@
   margin-top: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
-
 .spinner-explore {
   border: 3px solid #575757;
   border-radius: 50%;
@@ -75,36 +70,30 @@
   height: 30px;
   animation: spin 0.5s linear infinite;
 }
-
 .explore-tile .react_tinylink_card {
   filter: brightness(75%);
   color: #adadad;
   border: none;
   background-color: inherit;
 }
-
 .explore-tile .react_tinylink_card:hover {
   filter: brightness(100%);
   background-color: inherit;
 }
-
 .explore-tile .react_tinylink_card .react_tinylink_card_content_wrapper {
   padding: 0;
   padding-top: 10px;
 }
-
 .explore-tile
   .react_tinylink_card
   .react_tinylink_card_content_header_description {
   font-size: 20px;
 }
-
 .explore-tile
   .react_tinylink_card
   .react_tinylink_card_content_header_description:hover {
   text-decoration: underline;
 }
-
 .cldxej {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -116,7 +105,6 @@
     .react_tinylink_card_content_header_description {
     font-size: 17px;
   }
-
   .explore-tile .react_tinylink_card .react_tinylink_card:hover {
     filter: brightness(100%);
     background-color: inherit;
@@ -132,7 +120,6 @@
     .react_tinylink_card_content_header_description {
     font-size: 15px;
   }
-
   .explore-tile .react_tinylink_card .react_tinylink_card:hover {
     filter: brightness(100%);
     background-color: inherit;
@@ -158,7 +145,6 @@
   .explore-tile {
     margin-bottom: 60px;
   }
-
   .popular-stories-title {
     width: 100%;
   }
