--- a/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
+++ b/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
@@ -7,6 +7,11 @@
   background: rgba(0, 0, 0, 0.3);
   height: 63vh;
   overflow-y: auto;
+  z-index: 99;
+}
+
+.unhide-filters {
+  display: block;
 }
 
 #title-as {
@@ -42,4 +47,18 @@
 
 #filters {
   margin-top: 20px;
+}
+
+@media (max-width: 950px) {
+  #advanced-search-container {
+    /* display: none; */
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 50vw;
+    box-shadow: 1px 1px 16px 4px rgba(255, 255, 255, 0.5);
+    margin: 0;
+  }
+
+  .hide-filters {
+    display: none;
+  }
 }
