--- a/src/components/storiesComponents/sidebarComponents/StrategyFilter.css
+++ b/src/components/storiesComponents/sidebarComponents/StrategyFilter.css
@@ -17,3 +17,13 @@
   margin-left: -20px;
   line-height: normal;
 }
+
+@media (max-width: 950px) {
+  #strategy-choices {
+    display: block;
+  }
+
+  .choices-inline {
+    display: block;
+  }
+}
