--- a/src/components/storiesComponents/sidebarComponents/SolutionFilter.css
+++ b/src/components/storiesComponents/sidebarComponents/SolutionFilter.css
@@ -8,7 +8,11 @@
   padding: 7px 10px;
   border: none;
   font-size: 16px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   background-color: rgba(255, 255, 255, 0.85);
   font-weight: 200;
+}
+
+#solution-filter:focus {
+  outline: none;
 }
