--- a/src/components/loginComponents/PostStoryForm.css
+++ b/src/components/loginComponents/PostStoryForm.css
@@ -94,16 +94,16 @@ button.post-story {
 #place-suggestions {
   max-height: 200px;
   overflow-y: auto;
-  transform: translateY(-1rem);
   display: none;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-top: none;
   position: absolute;
   width: 100%;
-  top: 92px;
+  top: 75px;
   background-color: rgba(0, 0, 0, 0.85);
   font-weight: 300;
   z-index: 1;
+  /* display: block !important; */
 }
 #place-suggestions .place-name-dropdown {
   cursor: pointer;
@@ -126,6 +126,27 @@ input#sector::-webkit-calendar-picker-indicator {
   background-color: inherit;
   cursor: pointer;
 }
-datalist#sector-list {
-  background-color: red;
+#sector-list,
+#solution-list {
+  max-height: 200px;
+  overflow-y: auto;
+  display: none;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-top: none;
+  position: absolute;
+  width: 100%;
+  top: 75px;
+  background-color: rgba(0, 0, 0, 0.85);
+  font-weight: 300;
+  z-index: 1;
+}
+#sector-list p,
+#solution-list p {
+  cursor: pointer;
+  transition: all 0.2s;
+  padding: 8px 20px;
+}
+#sector-list p:hover,
+#solution-list p:hover {
+  background-color: rgba(51, 51, 51, 0.85);
 }
