--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -1,4 +1,5 @@
 /* STORY CONTAINER*/
+
 .unscrollable {
   height: 500px;
   overflow: hidden;
@@ -137,6 +138,7 @@
 }
 
 /* STORY CARD */
+
 .story-card {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.2);
@@ -151,6 +153,7 @@
 }
 
 /* HEADING CARD SECTION */
+
 .heading-card-section {
   padding: 5px 25px;
 }
@@ -180,6 +183,7 @@
 }
 
 /* HORIZONTAL LINE */
+
 hr {
   visibility: visible;
   margin: 0px auto;
@@ -187,16 +191,12 @@ hr {
   width: 100%;
   border: 0;
   height: 1px;
-  background-image: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0),
-    rgba(255, 255, 255, 0.75),
-    rgba(255, 255, 255, 0)
-  );
+  background-image: linear-gradient( to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
 }
 
 /* COMMENT AND LIKE CARD SECTION */
-.like-comment-section {
+
+.like-flag-section {
   height: 60px;
   display: flex;
 }
@@ -220,7 +220,7 @@ hr {
   margin-bottom: 1px;
 }
 
-.comment-button {
+.flag-button {
   display: flex;
   align-items: center;
   flex: 1 0 0px;
@@ -238,7 +238,7 @@ hr {
   border-radius: 0 0 0 5px;
 }
 
-.comment-button:hover {
+.flag-button:hover {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 0 0 5px 0;
 }
@@ -253,7 +253,7 @@ hr {
   margin-right: 5px;
 }
 
-.liked {
+.liked, .reported {
   color: #fc0037;
 }
 
@@ -265,6 +265,7 @@ hr {
 }
 
 /* SEARCH BAR IN STORIES PAGE */
+
 #search-for-story {
   width: 100%;
   color: #0d0d0d;
@@ -304,6 +305,7 @@ hr {
 }
 
 /* COMMENT LIST COMPONENT */
+
 .view-comments-btn {
   display: inline;
   border-left: 0.7px solid rgba(201, 201, 201, 0.5);
@@ -322,10 +324,10 @@ hr {
 }
 
 /* COMMENT DETAIL COMPONENT */
+
 .comment-detail {
   border-bottom: 0.4px solid rgba(201, 201, 201, 0.5);
   padding: 5px 10px;
-  min-height: 70px;
   height: auto;
 }
 
@@ -348,12 +350,12 @@ hr {
 .comment-footer {
   color: #d6d6d6;
   font-size: 14px;
-  margin-top: 16px;
-  margin-bottom: 4px;
 }
 
 .comment-hours-ago {
   font-weight: lighter;
+  color: white;
+  margin-right: 5px;
 }
 
 .comment-likes-count {
@@ -376,6 +378,7 @@ hr {
 }
 
 /* COMMENT COMPONENT */
+
 .comment-input-container {
   display: flex;
   height: 0px;
@@ -419,11 +422,9 @@ hr {
   .stories-grid {
     display: block;
   }
-
   .main-stories {
     z-index: 99;
   }
-
   .click-filter {
     display: block;
   }
@@ -434,24 +435,19 @@ hr {
     padding-left: 1rem;
     padding-right: 1rem;
   }
-
   .created-detail {
     font-size: 10px;
   }
-
   .liked-count {
     font-size: 12px;
   }
-
   .view-comments-btn {
     font-size: 13px;
   }
-
   hr {
     margin-top: 2px;
   }
-
-  .like-comment-font-mobile {
+  .comment-font-mobile {
     font-size: 12px;
   }
 }
