--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -191,7 +191,12 @@ hr {
   width: 100%;
   border: 0;
   height: 1px;
-  background-image: linear-gradient( to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.75),
+    rgba(255, 255, 255, 0)
+  );
 }
 
 /* COMMENT AND LIKE CARD SECTION */
@@ -253,7 +258,8 @@ hr {
   margin-right: 5px;
 }
 
-.liked, .reported {
+.liked,
+.reported {
   color: #fc0037;
 }
 
@@ -348,6 +354,8 @@ hr {
 }
 
 .comment-footer {
+  margin-top: 16px;
+  margin-bottom: 4px;
   color: #d6d6d6;
   font-size: 14px;
 }
