--- a/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
+++ b/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
@@ -5,7 +5,8 @@
   border: 0.5px solid rgba(201, 201, 201, 0.5);
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.3);
-  height: 63vh;
+  /* height: 63vh; */
+  height: fit-content;
   overflow-y: auto;
   z-index: 99;
 }
@@ -26,14 +27,8 @@
 }
 
 #apply-filters {
-  /* background: linear-gradient(
-    135deg,
-    rgba(8, 102, 255, 0.9),
-    rgb(142, 185, 255)
-  ); */
   background-color: rgba(103, 161, 255, 0.9);
   padding: 0 10px;
-  /* background-color: #fff; */
   font-size: 15px;
   border: none;
   border-radius: 3px;
@@ -51,11 +46,10 @@
 
 @media (max-width: 950px) {
   #advanced-search-container {
-    /* display: none; */
     background-color: rgba(0, 0, 0, 0.8);
-    /* width: 50vw; */
     width: 350px;
-    height: 450px;
+    /* height: 450px; */
+    height: fit-content;
     box-shadow: 1px 1px 16px 4px rgba(255, 255, 255, 0.5);
     margin: 0;
   }
