--- a/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
+++ b/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
@@ -1,14 +1,15 @@
 #advanced-search-container {
   color: #d9d9d9;
-  padding-top: 1rem;
-  margin-top: 19px;
+  padding-top: 5px;
   border: 0.5px solid rgba(201, 201, 201, 0.5);
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.3);
   /* height: 63vh; */
-  height: fit-content;
-  overflow-y: auto;
+  height: max-content;
+  overflow-y: visible;
   z-index: 99;
+  padding-bottom: 70px;
+  padding-right: 10px;
 }
 
 .unhide-filters {
