--- a/src/components/storiesComponents/sidebarComponents/FilterFieldContainer.css
+++ b/src/components/storiesComponents/sidebarComponents/FilterFieldContainer.css
@@ -1,5 +1,6 @@
 #filter-container {
-  margin: 0.5rem;
+  margin-left: 10px;
+  margin-bottom: 0;
   margin-top: 0;
   padding: 0.7rem 1rem;
   display: flex;
