--- a/src/components/storiesComponents/sidebarComponents/FiltersDropdown.css
+++ b/src/components/storiesComponents/sidebarComponents/FiltersDropdown.css
@@ -1,33 +1,20 @@
-.solution-dropdown-container {
+.filter-dropdown-container {
   color: #d9d9d9;
-  /* border: 1px solid rgba(201, 201, 201, 0.4); */
-  /* border-radius: 5px; */
-  min-height: 40px;
+  min-height: 33px;
   max-height: 157px;
   overflow-y: scroll;
   position: absolute;
   top: 89%;
   background-color: black;
   z-index: 99;
-  left: 15px;
-  right: 15px;
+  left: 16px;
+  right: 16px;
   display: none;
+  margin-bottom: 20px;
 }
 
-.sector-dropdown-container {
-  color: #d9d9d9;
-  /* border: 1px solid rgba(201, 201, 201, 0.4); */
-  /* border-radius: 5px; */
-  min-height: 40px;
-  max-height: 157px;
-  overflow-y: scroll;
-  position: absolute;
-  top: 89%;
-  background-color: black;
-  z-index: 99;
-  left: 14px;
-  right: 15px;
-  display: none;
+#solution {
+  max-height: 115px;
 }
 
 .searching {
@@ -35,8 +22,10 @@
 }
 
 .filter-entry {
-  padding: 10px;
+  padding: 7px 10px;
   cursor: pointer;
+  font-weight: 300;
+  font-size: 14px;
 }
 
 .filter-entry:focus {
@@ -51,11 +40,7 @@
 
 .filter-entry:last-child {
   border-bottom: none;
-}
-
-.non-hover {
-  padding: 20px;
-  color: #d9d9d98c;
+  margin-bottom: 0;
 }
 
 #initial-search {
