--- a/src/components/generalComponents/StoryPreview.Profile.css
+++ b/src/components/generalComponents/StoryPreview.Profile.css
@@ -6,6 +6,7 @@
   color: #ededed;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 2px;
+  background: rgba(0, 0, 0, 0.3);
 }
 .profile-story-wrapper:not(:last-child) {
   margin-bottom: 1rem;
@@ -21,7 +22,22 @@
 }
 .profile-story-wrapper .story-image img {
   height: 100%;
+  /* ADDED BY THEODORE */
+  width: 100%;
+  object-fit: cover;
+  /* ----------------- */
 }
+
+/* ADDED BY THEODORE */
+.profile-story-wrapper .story-title {
+  font-size: 20px;
+  font-weight: 500;
+}
+.profile-story-wrapper .story-title:hover {
+  text-decoration: underline;
+}
+/* ----------------- */
+
 .profile-story-wrapper .story-detail {
   padding: 8px 1rem;
 }
