--- a/src/components/storiesComponents/sidebarComponents/StorySignIn.css
+++ b/src/components/storiesComponents/sidebarComponents/StorySignIn.css
@@ -2,8 +2,10 @@
   text-align: center;
   border: 0.5px solid rgba(201, 201, 201, 0.4);
   padding: 1.5rem 1rem;
+  padding-bottom: 10px;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.2);
+  margin-bottom: 15px;
 }
 
 #login-question {
@@ -30,6 +32,7 @@
   visibility: visible;
   margin: 0px auto;
   margin-top: 10px;
+  margin-bottom: 1px;
   width: 100%;
   border: 0;
   height: 1px;
