--- a/src/components/storiesComponents/sidebarComponents/StrategyFilter.css
+++ b/src/components/storiesComponents/sidebarComponents/StrategyFilter.css
@@ -11,7 +11,7 @@
   margin-bottom: 0;
 }
 
-.choices-inline input[type="checkbox"] {
+.choices-inline input[type="radio"] {
   position: absolute;
   margin: 4px 0 0;
   margin-left: -20px;
