removed ReactTinyLink and better landing page responsiveness

--- a/src/components/generalComponents/StoryPreview.Profile.css
+++ b/src/components/generalComponents/StoryPreview.Profile.css
@@ -29,13 +29,13 @@
 }
 
 /* ADDED BY THEODORE */
-.profile-story-wrapper .story-title {
+/* .profile-story-wrapper .story-title {
   font-size: 20px;
   font-weight: 500;
-}
-.profile-story-wrapper .story-title:hover {
+} */
+/* .profile-story-wrapper .story-title:hover {
   text-decoration: underline;
-}
+} */
 /* ----------------- */
 
 .profile-story-wrapper .story-detail {
