--- a/src/components/landingComponents/FirstScreen.css
+++ b/src/components/landingComponents/FirstScreen.css
@@ -10,7 +10,6 @@
   width: 30px;
   height: 30px;
 }
-
 #first-screen {
   height: 100vh;
   color: #ededed;
@@ -44,6 +43,7 @@
   background-color: rgba(255, 255, 255, 0.85);
   border: none;
   padding: 1rem 1.6rem;
+  padding-right: 3rem !important;
   font-size: 1.2rem;
   font-weight: 300;
 }
@@ -241,7 +241,7 @@
     cursor: pointer;
   }
   .tab-title {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
   }
   .tab-description {
     font-size: 14px;
@@ -249,10 +249,29 @@
 }
 
 @media (max-width: 480px) {
-  #research-tab .tab-input {
-    flex-direction: column;
+  .tabs {
+    padding-top: 30vh;
+  }
+  .tab-title {
+    font-size: 1.4rem;
   }
   .research-input-wrapper {
     width: 100%;
+  }
+  .research-input-wrapper label {
+    font-size: 95%;
+    margin-top: 0;
+  }
+  .research-btn-wrapper {
+    margin-top: 0;
+  }
+  #research-tab .tab-input {
+    flex-direction: column;
+  }
+  #research-tab .tab-input input {
+    font-size: 95%;
+  }
+  #research-tab .tab-description {
+    margin-top: 8px;
   }
 }
