--- a/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
+++ b/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
@@ -5,7 +5,7 @@
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.3);
   /* height: 63vh; */
-  height: max-content;
+  height: min-content;
   overflow-y: visible;
   z-index: 99;
   padding-bottom: 70px;
