--- a/src/components/storiesComponents/sidebarComponents/FilterFieldContainer.css
+++ b/src/components/storiesComponents/sidebarComponents/FilterFieldContainer.css
@@ -3,6 +3,7 @@
   margin-bottom: 0;
   margin-top: 0;
   padding: 0.7rem 1rem;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   position: relative;
