--- a/src/components/generalComponents/NavLinks.css
+++ b/src/components/generalComponents/NavLinks.css
@@ -40,7 +40,8 @@
   transition: width 0.3s;
   background-color: #ededed;
 }
-.underline-hover:hover::after {
+.underline-hover:hover::after,
+.underline-hover.active::after {
   width: 100%;
 }
 
