--- a/src/components/storiesComponents/sidebarComponents/SectorFilter.css
+++ b/src/components/storiesComponents/sidebarComponents/SectorFilter.css
@@ -4,11 +4,15 @@
   font-weight: 200;
 }
 
+#sector-filter-header {
+  margin-bottom: 5px;
+  position: relative;
+}
+
 #sector-filter {
   padding: 7px 10px;
   border: none;
   font-size: 16px;
-  /* border-radius: 4px; */
   background-color: rgba(255, 255, 255, 0.85);
   font-weight: 200;
 }
