--- a/src/components/storiesComponents/sidebarComponents/SolutionFilter.css
+++ b/src/components/storiesComponents/sidebarComponents/SolutionFilter.css
@@ -1,3 +1,8 @@
+#solution-filter-header {
+  margin-bottom: 5px;
+  position: relative;
+}
+
 #solution-label {
   margin-bottom: 0.5rem;
   font-size: 20px;
