--- a/src/components/storiesComponents/sidebarComponents/SideBar.css
+++ b/src/components/storiesComponents/sidebarComponents/SideBar.css
@@ -6,11 +6,14 @@
   width: 90%;
   height: 100vh;
   overflow-y: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #side-bar-container #side-bar-absolute {
   min-width: 28%;
-  /* z-index: 2; */
   position: fixed;
 }
 
@@ -37,6 +40,10 @@
 .close-icon {
   width: 40px;
   height: 40px;
+}
+
+.unhide-sidebar {
+  display: flex;
 }
 
 #close-filters-container:hover {
