new story card design

--- a/src/components/generalComponents/StoryPreview.landing.css
+++ b/src/components/generalComponents/StoryPreview.landing.css
@@ -10,36 +10,86 @@
   margin-bottom: 1rem;
 }
 .landing-story-wrapper .story-image {
-  height: 200px;
+  height: 250px;
   width: 100%;
   overflow: hidden;
   border-radius: 2px 0 0 2px;
+  position: relative;
+  font-size: 14px;
 }
 .landing-story-wrapper .story-image img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
+.landing-story-wrapper .story-image .story-rating {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #5274C8;
+  padding: 4px 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+}
 .landing-story-wrapper .story-detail {
   padding: 8px 1rem;
+  position: relative;
 }
-.landing-story-wrapper .story-detail p:not(:last-child) {
-  margin-bottom: 1rem;
+.landing-story-wrapper .story-detail header {
+  margin-bottom: 8px;
+}
+.landing-story-wrapper .story-detail header span {
+  text-transform: uppercase;
+  font-size: 95%;
+  color: #0d0d0d;
+  background-color: #ededed;
+  border-radius: 2px;
+  padding: 1px 5px;
+}
+.landing-story-wrapper .story-detail article p:not(:last-child) {
+  margin-bottom: 10px;
 }
 .landing-story-wrapper .story-detail p:not(.story-title) {
   font-size: 14px;
   font-weight: 300;
 }
-.landing-story-wrapper .story-detail .story-hyperlink {
+.landing-story-wrapper .story-detail .story-hyperlink,
+.landing-story-wrapper .story-detail .story-post-info {
   width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow-x: hidden;
 }
+.landing-story-wrapper .story-detail .story-description {
+  max-height: 3.6rem;
+  background: linear-gradient(
+    to bottom,
+    #ededed,
+    #ededed 2.2rem,
+    transparent
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.landing-story-wrapper .story-detail footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 8px 1rem;
+}
 
 @media (min-width: 768px) {
   .landing-story-wrapper {
     display: block;
+    position: relative;
+    padding-bottom: 3rem;
+  }
+  .landing-story-wrapper .story-detail {
+    position: static;
   }
 }
 
@@ -54,5 +104,10 @@
   .landing-story-wrapper .story-image img {
     width: 100%;
     height: auto;
+  }
+  .landing-story-wrapper .story-detail footer {
+    position: relative;
+    padding: 0;
+    padding-top: 1rem;
   }
 }
