--- a/src/components/generalComponents/StoryPreview.map.css
+++ b/src/components/generalComponents/StoryPreview.map.css
@@ -17,13 +17,39 @@
   align-items: center;
   overflow: hidden;
   border-radius: 2px 2px 0 0;
+  position: relative;
+  font-size: 14px;
 }
 .map-story-wrapper .story-image img {
+  height: 100%;
   width: 100%;
-  height: auto;
+  object-fit: cover;
+}
+.map-story-wrapper .story-image .story-rating {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #5274C8;
+  padding: 4px 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
 }
 .map-story-wrapper .story-detail {
   padding: 8px 1rem;
+}
+.map-story-wrapper .story-detail header {
+  margin-bottom: 8px;
+}
+.map-story-wrapper .story-detail header span {
+  text-transform: uppercase;
+  font-size: 95%;
+  color: #0d0d0d;
+  background-color: #ededed;
+  border-radius: 2px;
+  padding: 1px 5px;
 }
 .map-story-wrapper .story-detail p:not(:last-child) {
   margin-bottom: 1rem;
