--- a/src/components/loginComponents/Profile.css
+++ b/src/components/loginComponents/Profile.css
@@ -67,14 +67,14 @@
   margin-bottom: 1rem;
 }
 
-.personal footer {
+/* .personal footer {
   height: 4rem;
   width: 100%;
   border-top: 1px solid rgba(255, 255, 255, 0.15);
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
+} */
 
 .post-form {
   display: flex;
