--- a/src/components/HelpPage.css
+++ b/src/components/HelpPage.css
@@ -56,15 +56,13 @@
 
 .help-sidenav-item {
   padding: 10px 20px;
-  color: #ffffff;
+  color: rgba(255, 255, 255, 0.6);
   cursor: pointer;
+  height: 52px;
 }
 
-.topic-explanation {
-  color: white;
-  font-weight: 400;
-  margin-bottom: 20px;
-  line-height: 30px;
+.help-sidenav-item:hover {
+  color: rgba(255, 255, 255, 1);
 }
 
 .help-content-paragraph {
