--- a/src/components/storiesComponents/sidebarComponents/CurrentSearchNotification.css
+++ b/src/components/storiesComponents/sidebarComponents/CurrentSearchNotification.css
@@ -1,5 +1,5 @@
 .currentDetailsContainer {
-    color: #d9d9d9;
+    color: white;
     border: 0.5px solid rgba(201, 201, 201, 0.5);
     border-radius: 5px;
     position: absolute;
@@ -8,12 +8,14 @@
     font-size: 14px;
     padding: 5px;
     left: 31rem;
+    background-color: black;
+    opacity: .7;
 }
 .currentDetailsContainer:hover{
     cursor: pointer;
 }
 .searchMessageContainer {
-    color: #d9d9d9;
+    color: white;
     padding-top: 5px;
     border: 0.5px solid rgba(201, 201, 201, 0.5);
     border-radius: 5px;
@@ -23,6 +25,8 @@
     z-index: 99;
     width: 20%;
     left: 31rem;
+    background-color: black;
+    opacity: .7;
 }
 .searchMessage {
 
