--- a/src/components/landingComponents/FirstScreen.css
+++ b/src/components/landingComponents/FirstScreen.css
@@ -10,13 +10,16 @@
   width: 30px;
   height: 30px;
 }
+
 #first-screen {
   height: 100vh;
   color: #ededed;
 }
+
 #animation-first {
   animation: firstScreen 1s ease-in-out 0s forwards;
 }
+
 @keyframes firstScreen {
   from {
     opacity: 0;
@@ -27,16 +30,18 @@
     transform: translateY(0px);
   }
 }
+
 .tab-input {
   display: flex;
   position: relative;
   width: 90%;
   max-width: 700px;
 }
-#stories-tab .tab-input,
-#map-tab .tab-input {
+
+#stories-tab .tab-input, #map-tab .tab-input {
   align-items: center;
 }
+
 .tab-input input {
   width: 100%;
   color: #0d0d0d;
@@ -47,12 +52,22 @@
   font-size: 1.2rem;
   font-weight: 300;
 }
+
 .tab-input img {
   cursor: pointer;
   position: absolute;
   right: 0;
   transform: translateX(-1.6rem);
 }
+
+.tab-input a {
+  color: white;
+}
+
+.tab-input a:hover {
+  color: rgba(255, 255, 255, 0.95);
+}
+
 .primary-btn {
   background-color: rgba(255, 255, 255, 0.9);
   width: 10rem;
@@ -66,11 +81,11 @@
   display: inline-block;
   text-align: center;
 }
-.primary-btn:link,
-.primary-btn:active,
-.primary-btn:visited {
+
+.primary-btn:link, .primary-btn:active, .primary-btn:visited {
   color: #0d0d0d;
 }
+
 #background {
   position: absolute;
   top: 0;
@@ -82,17 +97,21 @@
   z-index: -1;
   box-shadow: 1vw -50vh 50vh 0 #0d0d0d inset;
 }
+
 .tabs {
   padding-top: 32vh;
 }
+
 .tab-btn {
   display: inline-block;
   position: relative;
   font-weight: 300;
 }
+
 .tab-btn.active {
   font-weight: 400;
 }
+
 .tab-btn::after {
   content: "";
   display: inline-block;
@@ -104,40 +123,51 @@
   bottom: -2px;
   left: 0;
 }
+
 .tab-btn.active::after {
   width: 100%;
 }
+
 .tab-btn:not(:last-child) {
   margin-right: 2rem;
 }
+
 .tab-container {
   display: none;
   position: relative;
   margin-top: 1rem;
 }
+
 .tab-container.active {
   display: block;
 }
+
 .tab-title {
   font-size: 2.2rem;
   font-weight: 400;
   display: none;
   margin-bottom: 1rem;
 }
+
 .tab-title.active {
   display: block;
 }
+
 .tab-description {
-  max-width: 400px;
+  /* Same width as search bar */
+  max-width: 700px;
   margin-top: 1rem;
 }
+
 .tab-description p:first-child {
   font-weight: 400;
-  margin-bottom: 4px;
 }
+
 .tab-description p {
   font-weight: 300;
+  margin-bottom: 0.5rem;
 }
+
 .place-suggestions {
   position: absolute;
   top: 100%;
@@ -152,36 +182,45 @@
   overflow-y: auto;
   display: none;
 }
+
 .place-suggestions p {
   cursor: pointer;
   font-weight: 400;
 }
+
 .place-suggestions p:not(:last-child) {
   margin-bottom: 0.8rem;
 }
+
 .place-suggestions p span {
   display: block;
   font-size: 14px;
   font-weight: 300;
 }
+
 .research-input-wrapper {
   width: 50%;
 }
+
 .research-input-wrapper:not(:last-child) {
   margin-right: 1rem;
 }
+
 .research-input-wrapper label {
   margin: 8px;
   display: inline-block;
 }
+
 .research-input-wrapper label span {
   margin-left: 8px;
   font-size: 14px;
   font-weight: 300;
 }
+
 .research-btn-wrapper {
   margin-top: 1rem;
 }
+
 .research-btn-wrapper button {
   border: 1px solid #ededed;
   border-radius: 4px;
@@ -192,6 +231,7 @@
   font-weight: 300;
   cursor: pointer;
 }
+
 .research-btn-wrapper button:not(:last-child) {
   margin-right: 8px;
 }
