--- a/src/components/HelpPage.css
+++ b/src/components/HelpPage.css
@@ -10,16 +10,6 @@
   padding-bottom: 10rem;
 }
 
-.help-sidebar {
-  top: 0;
-  height: 100%;
-  padding-top: 7rem;
-  width: 250px;
-  position: fixed;
-  background-color: rgba(10, 10, 10, 0.7);
-  box-shadow: 3px 0 6px rgba(10, 10, 10, 0.5);
-}
-
 #help-background {
   position: fixed;
   top: 0;
@@ -43,26 +33,15 @@
   margin-bottom: 10px;
 }
 
-#help-hr {
+.help-hr {
   margin-bottom: 20px;
   height: 1px;
   border: 0.4px solid rgba(255, 255, 255, 0.5);
 }
 
-#understand-climate-tree {
+.objective {
   color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
-}
-
-.help-sidenav-item {
-  padding: 10px 20px;
-  color: rgba(255, 255, 255, 0.6);
-  cursor: pointer;
-  height: 52px;
-}
-
-.help-sidenav-item:hover {
-  color: rgba(255, 255, 255, 1);
 }
 
 .help-content-paragraph {
