--- a/src/components/mapsComponents/BaseMapToggle.css
+++ b/src/components/mapsComponents/BaseMapToggle.css
@@ -3,7 +3,7 @@
     position: absolute;
     bottom: .55rem;
     right: 50px;
-    display: inline;;
+    display: inline;
     align-items: center;
     border-radius: 4px;
     width: 9rem;
@@ -12,7 +12,8 @@
     text-align: center;
     background-color: black;
     opacity: .7;
-  }
+}
+
 .radio-input {
     display: block;
     word-wrap: break-word;
@@ -21,6 +22,13 @@
     padding-left: 1rem;
     text-align: justify;
 }
+
 .map-label {
     float: right;
+}
+
+@media (max-width: 767px) {
+    .radio-wrapper {
+        right: 1rem;
+    }
 }
