--- a/src/components/helpComponents/SideNav.css
+++ b/src/components/helpComponents/SideNav.css
@@ -8,27 +8,81 @@
   box-shadow: 3px 0 6px rgba(10, 10, 10, 0.5);
 }
 
-/* WILL BE GONE FOR GOOD !!! */
 .help-sidenav-item {
   padding: 10px 20px;
-  color: rgba(255, 255, 255, 0.6);
-  cursor: pointer;
   height: 52px;
   font-size: 20px;
 }
-
-.help-sidenav-item:hover {
-  color: rgba(255, 255, 255, 1);
-}
-/*----------------------------*/
 
 .sidenav-link-item {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.sidenav-active {
+  color: rgba(255, 255, 255, 1);
 }
 
 .sidenav-link-item:hover {
   color: rgba(255, 255, 255, 1);
+}
+
+.sidebar-burger {
+  display: none;
+}
+
+@media (max-width: 870px) {
+  .help-sidebar {
+    transform: translateX(-100%);
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .help-sidebar-active {
+    transform: translateX(0%);
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 100;
+  }
+
+  .sidebar-burger {
+    display: block;
+    top: 100px;
+    position: fixed;
+    cursor: pointer;
+    padding: 5px;
+    background-color: #000000;
+    border-top: 0.5px solid rgba(255, 255, 255, 0.5);
+    border-right: 0.5px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 0.5px solid rgba(255, 255, 255, 0.5);
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    transform: translateX(0px);
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .sidebar-burger-active {
+    transform: translateX(250px);
+    padding-left: 1px;
+  }
+
+  .sidebar-burger div {
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background-color: #ededed;
+    transition: all 0.5s ease;
+  }
+
+  .toggle-help .sidebar-line1 {
+    transform: rotate(-45deg) translate(-4px, 7px);
+  }
+
+  .toggle-help .sidebar-line2 {
+    opacity: 0;
+  }
+
+  .toggle-help .sidebar-line3 {
+    transform: rotate(45deg) translate(-4px, -7px);
+  }
 }
