--- a/src/components/helpComponents/SideNav.css
+++ b/src/components/helpComponents/SideNav.css
@@ -19,6 +19,7 @@
   align-items: center;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.4);
+  transition: color 0.2s;
 }
 
 .sidenav-active {
